Added some css/login page

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,8 +1,17 @@
 <html>
   <head>
+  <link href="https://fonts.googleapis.com/css?family=Arsenal|Chivo|Satisfy" rel="stylesheet">
+  <link href="/css/login_2k.css" rel="stylesheet">
   </head>
 
   <body>
-  <%= yield %>
+    <center>
+      <div class="title_text">
+        <h3>YACA</h3>
+        (Yet another Contacts Application)
+      </div>
+      <br><br><br>
+      <%= yield %>
+    </center>
   </body>
 </html>
