--- a/views/login.erb
+++ b/views/login.erb
@@ -1,4 +1,12 @@
+<link href="/css/login_2k.css" rel="stylesheet">
 <script src="/js/login.js"></script>
+
+      <div class="title_text">
+        <h3>YACA</h3>
+        (Yet another Contacts Application)
+      </div>
+      <br><br><br>
+      
 <div class="popup_card">
   
   <form action="login" method="post"><br>
