--- a/views/home.erb
+++ b/views/home.erb
@@ -14,7 +14,11 @@
     <td><div id="contact_info">
         <% contacts.each do |item| %>
             <% if item[:id] == current_view.to_i %>
-                <%= item[:name] %>
+                <input type="text" name="contact_name" value="<%= item[:name] %>" disabled> <button>E</button><br>
+                <input type="text" name="contact_phone" value="<%= item[:phone] %>" disabled> <button>E</button><br>
+                <input type="text" name="contact_address" value="<%= item[:address] %>" disabled> <button>E</button><br>
+                <input type="text" name="contact_zip" value="<%= item[:zip] %>" disabled> <button>E</button><br>
+                <textarea name="contact_notes" rows="8" disabled><%= item[:notes] %></textarea> <button>E</button><br>
             <% end %>
         <% end %>
     </div></td>
