--- a/public/css/home_2k.css
+++ b/public/css/home_2k.css
@@ -1,12 +1,16 @@
 body {
     margin: 0;
 }
+textarea {
+    resize: none;
+}
 
 #contact_list {
     background-color: rgb(40, 32, 75);
     height: 100%;
     width: 20%;
     float: left;
+    font-family: 'PT Sans', sans-serif;
 }
 
 #contact_info {
@@ -14,6 +18,10 @@ body {
     width: 80%;
     float: right;
     background-color: rgb(63, 52, 114);
+    font-family: 'PT Sans', sans-serif;
+    text-align: left;
+    font-size: 1.3rem;
+    color: white;
 }
 
 #logout {
@@ -23,6 +31,31 @@ body {
     float: right;
     cursor: pointer;
     font-size: 1.2rem;  
+}
+
+.editbtn {
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    margin-top: 5px;
+    outline: none;
+    font-size: 1.3rem;
+}
+
+.contact-field {
+    border: 0px;
+    background: transparent;
+    border-bottom: 2px solid royalblue;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.3rem;
+    color: white;
+    margin-top: 7px;
+    margin-right: 4px;
+    margin-left: 10px;
+}
+
+input[disabled] {
+    cursor: ponter;
 }
 
 .viewbtn {
@@ -36,6 +69,8 @@ body {
     outline: none;
     padding: 8px;
     width: 100%;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.3rem;
 }
 
 .viewbtn:hover {
