Added some js and save button

--- a/public/css/home_2k.css
+++ b/public/css/home_2k.css
@@ -40,6 +40,7 @@ textarea {
     margin-top: 5px;
     outline: none;
     font-size: 1.3rem;
+    cursor: pointer;
 }
 
 .contact-field {
@@ -75,4 +76,24 @@ input[disabled] {
 
 .viewbtn:hover {
     background-color: rgb(32, 27, 56);
+}
+
+
+.savebtn {
+    border: none;
+    background-color: rgb(63, 52, 114);
+    color: white;
+    display: inline-block;
+    text-align: left;
+    border-bottom: 2px;
+    border-color: white;
+    outline: none;
+    padding: 8px;
+    width: 100%;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1.3rem;
+}
+
+.savebtn:hover {
+    background-color: rgb(40, 32, 75);
 }
