--- a/views/home.erb
+++ b/views/home.erb
@@ -18,11 +18,12 @@
     </form>
         <% contacts.each do |item| %>
             <% if item[:id] == current_view.to_i %>
-                <input type="text" onclick="enableInput('name');" class="contact-field" id="contact-name" name="contact-name" value="<%= item[:name] %>" disabled><br>
-                <input type="text" class="contact-field" name="contact-phone" value="<%= item[:phone] %>" disabled><br>
-                <input type="text" class="contact-field" name="contact-address" value="<%= item[:address] %>" disabled><br>
-                <input type="text" class="contact-field" name="contact-zip" value="<%= item[:zip] %>" disabled><br>
-                <textarea class="contact-field" name="contact-notes" rows="8" disabled><%= item[:notes] %></textarea><br>
+                <input type="text" class="contact-field" id="contact-name" onblur="disableInput('name');" name="contact-name" value="<%= item[:name] %>" disabled><button id="edit-name" class="editbtn" onclick="enableInput('name');"><i class="fa fa-edit"></i></button><br>
+                <input type="text" class="contact-field" id="contact-phone" name="contact-phone" onblur="disableInput('phone');" value="<%= item[:phone] %>" disabled><button id="edit-phone" class="editbtn" onclick="enableInput('phone');"><i class="fa fa-edit"></i></button><br>
+                <input type="text" class="contact-field" id="contact-address" name="contact-address" onblur="disableInput('address');" value="<%= item[:address] %>" disabled><button id="edit-address" class="editbtn" onclick="enableInput('address');"><i class="fa fa-edit"></i></button><br>
+                <input type="text" class="contact-field" id="contact-zip" name="contact-zip" onblur="disableInput('zip');" value="<%= item[:zip] %>" disabled><button id="edit-zip" class="editbtn" onclick="enableInput('zip');"><i class="fa fa-edit"></i></button><br>
+                <textarea class="contact-field" id="contact-notes" name="contact-notes" onblur="disableInput('notes');" rows="8" disabled><%= item[:notes] %></textarea><button id="edit-notes" class="editbtn" onclick="enableInput('notes');"><i class="fa fa-edit"></i></button><br>
+                <br><button class="savebtn" name="save" value="<%= item[:id] %>"><center>Save</center></button>
             <% end %>
         <% end %>
     </div>
