--- a/public/css/home_2k.css
+++ b/public/css/home_2k.css
@@ -31,6 +31,7 @@ textarea {
     float: right;
     cursor: pointer;
     font-size: 1.2rem;  
+    outline: none;
 }
 
 .editbtn {
@@ -53,6 +54,7 @@ textarea {
     margin-top: 7px;
     margin-right: 4px;
     margin-left: 10px;
+    outline: none;
 }
 
 input[disabled] {
