Fixed newline in notes

--- a/views/home.erb
+++ b/views/home.erb
@@ -2,6 +2,7 @@
 <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="/js/home.js"></script>
+<body onload="parseNotes()">
     <div id="contact_list">
         <form action="view" method="post">
             <% contacts.each do |item| %>
@@ -30,3 +31,4 @@
         <% end %>
     </form>
     </div>
+</body>
