--- a/public/css/home_2k.css
+++ b/public/css/home_2k.css
@@ -33,6 +33,16 @@ textarea {
     font-size: 1.2rem;  
     outline: none;
 }
+#delete {
+    border: none;
+    background-color: rgba(0, 0, 0, 0);
+    color: gray;
+    cursor: pointer;
+    font-size: 1.2rem;  
+    outline: none;
+    float: right;
+    display: inline-block;
+}
 
 .editbtn {
     border: none;
